--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "swiper": "^3.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-video-player": "^5.0.2",
     "vuex": "^2.1.1"
   },
   "devDependencies": {
@@ -43,6 +44,8 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
@@ -61,10 +64,7 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3"
-
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 6.0.0",
